fixed navNotifications nav-icon bug on mobile

--- a/app/client/templates/common/navNotifications/navNotifications.css
+++ b/app/client/templates/common/navNotifications/navNotifications.css
@@ -39,4 +39,9 @@
 		font-size: 0.9em;
 		padding: 0.6rem;
 	}
+
+	.navNotifications .navbar-icon i {
+		height: 56px;
+		line-height: 56px;
+	}
 }
